@@ -50,6 +50,10 @@ RELEASE 0.14 - XXX
     Node's state, allowing it to be re-evaluated by continuous
     integration build interfaces.
 
+  - Change the name of the Set{Build,Content}SignatureType() functions
+    to {Target,Source}Signatures().  Deprecate the old names but support
+    them for backwards compatibility.
+
   From Stefan Reichor:
 
   - Add support for using Ghostscript to convert Postscript to PDF files.
